# figh-py

./: .env.sample  .gitignore  .pre-commit-config.yaml  INSTALL.md  LICENSE  Makefile  README.md  pyproject.toml  temp.py
.github/: CODEOWNERS  DEVELOPMENT_FLOW.md  pull_request_template.md
figh/: __init__.py  config_file_format.py  github.py  util.py
scripts/: local_setup.sh
src/figh/: __init__.py  github.py  util.py
src/figh_skspark/: __init__.py  base.py  config_file_format.py  errors.py  github.py  util.py
tests/integration_tests/: conftest.py  test_github.py
tests/resources/duplicated-yaml/: first.yaml
tests/resources/duplicated-yaml/first/: second.yaml
tests/resources/nested-yaml/: first.yaml  redundant.json
tests/resources/nested-yaml/second/: base.yaml
tests/resources/nested-yaml/second/fourth/: base.yaml
tests/resources/nested-yaml/third/: base.yaml
tests/resources/single-yaml/: first.yaml
tests/unit_tests/: test_config_file_format.py  test_github.py
